clusters/homelab/apps/internet-monitor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: internet-monitor
  namespace: internet-monitor
spec:
  selector:
    app: internet-monitor
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
